fixed word-wrap of all h2.title (#27)

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -68,6 +68,7 @@ a {
   text-align: center;
   color: $black_500;
   width: max-content;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
   text-transform: uppercase;
